# SignalR-Client-Cpp

./: CMakeLists.txt
src/signalrclient/: CMakeLists.txt
